...
                                <connections>
                                    <action selector="logout:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kR3-L0-aIN"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9wC-xP-8OI">
                                <rect key="frame" x="16" y="340" width="111" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Show Screenset"/>
                                <state key="normal" title="Show Screenset"/>
                                <connections>
                                    <action selector="showScreenSet:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6jO-Dx-AyC"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNt-XW-RSV">
                                <rect key="frame" x="16" y="386" width="38" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Login"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4qB-ug-GRz"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cq6-7s-6Kn">
...
