...
                    self?.resultTextView?.text = data.toJson()
                case .failure(_):
                    break
                }
            }
        } else {
            self.resultTextView?.text = "Logged out"
        }
    }
    
    
    @IBAction func getAccount(_ sender: Any) {
        gigya.register(params: ["email": "dasdsad@testss.com", "password": "121233"]) { (result) in
...
